--- a/kubernetes/configmaps.yaml
+++ b/kubernetes/configmaps.yaml
@@ -19,7 +19,40 @@ data:
     -- TABLES SCHEMA
     -- ============================================================================
 
-    -- 1. USERS (Staff login)
+    CREATE TABLE organizations (
+      id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+      name VARCHAR(255) NOT NULL,
+      slug VARCHAR(255) NOT NULL UNIQUE,
+      contact_email VARCHAR(255),
+      contact_phone VARCHAR(50),
+      plan_type VARCHAR(50) NOT NULL DEFAULT 'FREE',
+      is_active BOOLEAN NOT NULL DEFAULT true,
+      created_at TIMESTAMP NOT NULL DEFAULT NOW(),
+      updated_at TIMESTAMP NOT NULL DEFAULT NOW()
+    );
+
+    CREATE TABLE branches (
+      id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+      organization_id UUID NOT NULL REFERENCES organizations(id) ON DELETE CASCADE,
+      name VARCHAR(255) NOT NULL,
+      slug VARCHAR(255) NOT NULL,
+      address TEXT,
+      city VARCHAR(100),
+      province VARCHAR(100),
+      postal_code VARCHAR(20),
+      phone VARCHAR(50),
+      email VARCHAR(255),
+      opening_time VARCHAR(20),
+      closing_time VARCHAR(20),
+      is_active BOOLEAN NOT NULL DEFAULT true,
+      created_at TIMESTAMP NOT NULL DEFAULT NOW(),
+      updated_at TIMESTAMP NOT NULL DEFAULT NOW(),
+
+      CONSTRAINT uq_branch_slug UNIQUE (organization_id, slug)
+    );
+
+    CREATE INDEX idx_branches_org ON branches(organization_id);
+
     -- Staff accounts for POS
     CREATE TABLE users (
       id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
@@ -27,15 +60,21 @@ data:
       password_hash VARCHAR(255) NOT NULL,
       role VARCHAR(20) NOT NULL, -- 'cashier', 'manager', 'admin'
       name VARCHAR(100) NOT NULL,
+      organization_id UUID REFERENCES organizations(id) ON DELETE SET NULL,
+      branch_id UUID REFERENCES branches(id) ON DELETE SET NULL,
       is_active BOOLEAN NOT NULL DEFAULT true,
+      last_login_at TIMESTAMP,
       created_at TIMESTAMP NOT NULL DEFAULT NOW(),
-      updated_at TIMESTAMP NOT NULL DEFAULT NOW()
+      updated_at TIMESTAMP NOT NULL DEFAULT NOW(),
+
+      CONSTRAINT uq_user_org UNIQUE (username, organization_id)
     );
 
     -- 2. TABLES (Physical tables in restaurant)
     -- Easy to create/delete/manage
     CREATE TABLE tables (
       id SERIAL PRIMARY KEY,
+      branch_id UUID NOT NULL REFERENCES branches(id) ON DELETE CASCADE,
       table_number INT NOT NULL UNIQUE,
       name VARCHAR(100) NOT NULL, -- e.g., "Table 5", "Bar Seat 3"
       capacity INT NOT NULL DEFAULT 4,
@@ -70,6 +109,8 @@ data:
     --   - Takeaway (no table)
     CREATE TABLE orders (
       id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+      organization_id UUID REFERENCES organizations(id) ON DELETE SET NULL,
+      branch_id UUID REFERENCES branches(id) ON DELETE SET NULL,
       table_id INT REFERENCES tables(id), -- NULL for takeaway
       qr_session_id UUID REFERENCES qr_sessions(id), -- NULL if not QR
       order_number INT NOT NULL, -- for display (e.g., "#0001")
@@ -142,6 +183,9 @@ data:
       code VARCHAR(50) UNIQUE, -- NULL for auto-applied promos
       name VARCHAR(255) NOT NULL,
       description TEXT,
+
+      organization_id UUID REFERENCES organizations(id) ON DELETE SET NULL,
+      branch_id UUID REFERENCES branches(id) ON DELETE SET NULL,
       
       -- Discount type
       discount_type VARCHAR(20) NOT NULL, -- FIXED_AMOUNT, PERCENTAGE
